# subway-congestion-analysis

./: .gitignore  README.md  a.md  pyproject.toml
.agent/rules/: base.md
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: Q1_commute_congestion_analysis.py  Q1_출퇴근_혼잡도_분석_보고서.txt  Q1_출퇴근_혼잡도_분석결과.csv  floating_pop_analysis.py  weather_passenger_analysis.py  날씨_승하차_상관분석_결과.md  역세권건물_혼잡도_상관관계_분석보고서.md  유동인구_혼잡도_상관분석_결과.md  직장인구_혼잡도_상관분석_결과.md  추정매출_혼잡도_상관분석_결과.md  혼잡도_종합분석_결과.md
db/: lines.sql  schema.sql  weather_schema.sql
docs/: erd.md  preprocess.md  project.md  todo.md
docs/domain/: building.md  bus_stops.md  congestion.md  intro.md  population.md  revenue.md
docs/prompt/: eda.md  preprocessing.md  visualize.md
notebooks/: a.ipynb  analysis_congestion_workforce.ipynb  append_cells.py  db.ipynb  extract_code.py  tools.ipynb  validation_script.py  건축물대장.ipynb  서울교통공사_지하철_혼잡도.Ipynb  서울시_상권분석서비스_길단위인구_행정동.ipynb  서울시_상권분석서비스_직장인구_행정동.ipynb  서울시_상권분석서비스_추정매출_행정동.ipynb  서울시_인구_추정매출_API_다운로드.ipynb  시간대별_혼잡도_역세권건물_상관분석.ipynb  역세권건물_혼잡도_상관분석.ipynb  직장인구_혼잡도_상관분석.ipynb  추정매출_혼잡도_상관분석.ipynb  행정동_단위_서울_생활인구.ipynb  혼잡도_시각화.ipynb  혼잡도_종합_연관성_분석.ipynb
src/01_acquire/: 00_create_db.py  01_init_db.py  02_insert_subway.py  03_insert_congestion.py  03_insert_job_population.py  03_insert_subway_timetable.py  04_insert_congestion.py  04_insert_floating_population.py  04_insert_living_population.py  05_insert_estimated_revenue.py  06_insert_subway_timetable.py  07_insert_living_population.py  07_insert_station_daily_passengers.py  07_insert_weather.py  09_insert_impact_analysis.py  (+8 more)
(+42 files in other folders)
